# v2v-simulation

./: .gitignore  .ninja_deps  .ninja_log  BUGFIX_500_VEHICLES.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  GITHUB_SETUP.md  GUIDE_CLION.md  INSTALL_WINDOWS.md  INSTALL_WINDOWS_CLION.md  PERFORMANCE.md  README.md  README_ALSACE.md  README_GITHUB.md  TEST_V2V.md  build.ninja  test_v2v.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.qt/: QtDeploySupport.cmake
config/: mulhouse.json
data/: download_osm.sh
include/communication/: V2VCommunicationManager.hpp  V2VMessage.hpp
include/core/: SimulationEngine.hpp  TimeController.hpp  Vehicle.hpp
include/data/: GeometryUtils.hpp  OSMParser.hpp  TileManager.hpp
include/network/: InterferenceGraph.hpp  PathCache.hpp  PathPlanner.hpp  RoadGraph.hpp  SpatialIndex.hpp
include/utils/: Config.hpp  Logger.hpp  Profiler.hpp
include/visualization/: GraphOverlay.hpp  MainWindow.hpp  MapRenderer.hpp  MapView.hpp  VehicleRenderer.hpp
scripts/: download_osm.sh
src/: main.cpp
src/communication/: V2VCommunicationManager.cpp
src/core/: SimulationEngine.cpp  TimeController.cpp  Vehicle.cpp
src/data/: GeometryUtils.cpp  OSMParser.cpp  TileManager.cpp
src/network/: InterferenceGraph.cpp  PathCache.cpp  PathPlanner.cpp  RoadGraph.cpp  SpatialIndex.cpp
src/utils/: Config.cpp  Logger.cpp  Profiler.cpp
src/visualization/: GraphOverlay.cpp  MainWindow.cpp  MapRenderer.cpp  MapView.cpp  VehicleRenderer.cpp
v2v_simulator_autogen/: deps  mocs_compilation.cpp
